--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,20 +9,30 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: 'adopt'
+
+      - name: Cache Maven repository
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-${{ github.event.repository.name }}-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ github.event.repository.name }}-
+
       - name: Build with Maven
         run: mvn clean package
-      - name: Install JFrog CLI
-        run: |
-          curl -fL https://getcli.jfrog.io | sh
-          sudo mv jfrog /usr/local/bin/
-      - name: Configure JFrog CLI
-        run: |
-          jfrog rt config --url=http://localhost:8081 --user=admin --password=!2345Qwert
-      - name: Upload artifact to JFrog Artifactory
-        run: |
-          jfrog rt upload "target/*.jar" "your-repo/springboot-project/${{ github.sha }}/"
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ github.event.repository.name }}
+          path: |
+            **/target/dependency-jars/
+            **/target/*.jar
+          retention-days: 1
+          if-no-files-found: warn
